--- a/examplesUsingCertificateAuthentication/AzureCertAuth/AzureCertAuth/AzureCertAuth.csproj
+++ b/examplesUsingCertificateAuthentication/AzureCertAuth/AzureCertAuth/AzureCertAuth.csproj
@@ -8,5 +8,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="server.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
