--- a/examplesUsingCertificateAuthentication/GrpcCertAuthChainedCertificate/GrpcClient/GrpcClient.csproj
+++ b/examplesUsingCertificateAuthentication/GrpcCertAuthChainedCertificate/GrpcClient/GrpcClient.csproj
@@ -22,5 +22,11 @@
   <ItemGroup>
     <Protobuf Include="Protos\greet.proto" GrpcServices="Client" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="clientl4.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   
 </Project>
