--- a/examplesUsingCertificateAuthentication/GrpcCertAuthChainedCertificate/GrpcCertAuthChainedCertificate/GrpcCertAuthChainedCertificate.csproj
+++ b/examplesUsingCertificateAuthentication/GrpcCertAuthChainedCertificate/GrpcCertAuthChainedCertificate/GrpcCertAuthChainedCertificate.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="serverl4.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
