--- a/src/CertificateManager/CertificateManager.csproj
+++ b/src/CertificateManager/CertificateManager.csproj
@@ -2,11 +2,33 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/damienbod/AspNetCoreCertificates</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/damienbod/AspNetCoreCertificates</RepositoryUrl>
+    <PackageIcon>icon.jpeg</PackageIcon>
+    <PackageIconUrl />
+    <Description>Certificate Manager is a package which makes it easy to create certificates (chained and self signed) which can be used to in client server authentication and IoT Devices like Azure IoT Hub
+</Description>
+    <PackageTags>certificate authentication mtls pfx cer pem cert crt</PackageTags>
+    <PackageReleaseNotes>first release, certificate creation, export certificates chained and self signed</PackageReleaseNotes>
+    <Copyright>2020 damienbod</Copyright>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\icon.jpeg">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
