--- a/src/CertificateManager/CertificateManager.csproj
+++ b/src/CertificateManager/CertificateManager.csproj
@@ -11,11 +11,11 @@
     <Description>Certificate Manager is a package which makes it easy to create certificates (chained and self signed) which can be used to in client server authentication and IoT Devices like Azure IoT Hub
 </Description>
     <PackageTags>certificate authentication mtls pfx cer pem cert crt</PackageTags>
-    <PackageReleaseNotes>small fixes for RSA certificates</PackageReleaseNotes>
+    <PackageReleaseNotes>private key, public certificate pem exports</PackageReleaseNotes>
     <Copyright>2020 damienbod</Copyright>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>damienbod</Authors>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
