--- a/examplesUsingCertificateAuthentication/SimulateAzureIoTDevice/SimulateAzureIoTDevice/SimulateAzureIoTDevice.csproj
+++ b/examplesUsingCertificateAuthentication/SimulateAzureIoTDevice/SimulateAzureIoTDevice/SimulateAzureIoTDevice.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.33.1" />
+    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.39.0" />
   </ItemGroup>
 
   <ItemGroup>
