--- a/examplesUsingCertificateAuthentication/AspNetCoreChained/AspNetCoreCertificateAuth/Properties/launchSettings.json
+++ b/examplesUsingCertificateAuthentication/AspNetCoreChained/AspNetCoreCertificateAuth/Properties/launchSettings.json
@@ -1,27 +1,12 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "https://localhost:44308/",
-      "sslPort": 44308
-    }
-  },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "AspNetCoreCertificateAuth": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:5002"
     }
   }
 }
