--- a/examplesUsingCertificateAuthentication/AspNetCoreChained/AspNetCoreCertificateAuthApiChained/Properties/launchSettings.json
+++ b/examplesUsingCertificateAuthentication/AspNetCoreChained/AspNetCoreCertificateAuthApiChained/Properties/launchSettings.json
@@ -1,22 +1,6 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "https://localhost:44378/",
-      "sslPort": 44378
-    }
-  },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "api/values",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "AspNetCoreCertificateAuthApi": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -24,7 +8,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:5001"
     }
   }
 }
